--- a/src/gui/View/AddCategories.fxml
+++ b/src/gui/View/AddCategories.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="gui.View.AddCategories"
+            fx:controller="gui.Controller.AddCategoriesController"
             prefHeight="400.0" prefWidth="600.0">
 
 </AnchorPane>
