--- a/src/gui/View/Main.fxml
+++ b/src/gui/View/Main.fxml
@@ -1,14 +1,90 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="gui.View.Main"
-            prefHeight="400.0" prefWidth="600.0">
 
-</AnchorPane>
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="850.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <HBox prefHeight="120.0" prefWidth="850.0">
+         <children>
+            <Label fx:id="label" text="Label">
+               <HBox.margin>
+                  <Insets left="405.0" top="60.0" />
+               </HBox.margin>
+            </Label>
+            <TextField fx:id="searchField">
+               <HBox.margin>
+                  <Insets left="225.0" top="55.0" />
+               </HBox.margin>
+            </TextField>
+         </children>
+      </HBox>
+      <HBox prefHeight="580.0" prefWidth="850.0">
+         <children>
+            <VBox>
+               <children>
+                  <TableView fx:id="categoriesView" maxHeight="530.0" maxWidth="425.0" minHeight="530.0" minWidth="425.0" prefHeight="530.0" prefWidth="425.0">
+                    <columns>
+                      <TableColumn fx:id="categoryNameColumn" prefWidth="75.0" text="Name" />
+                      <TableColumn fx:id="amountColumn" prefWidth="75.0" text="Amount" />
+                    </columns>
+                  </TableView>
+                  <HBox prefWidth="390.0">
+                     <VBox.margin>
+                        <Insets left="30.0" right="30.0" top="10.0" />
+                     </VBox.margin>
+                     <children>
+                        <Button fx:id="newCategory" mnemonicParsing="false" onAction="#openAddCategories" prefHeight="25.0" prefWidth="40.0" text="New" />
+                        <Button fx:id="editCategory" mnemonicParsing="false" onAction="#openAddCategories" prefHeight="25.0" prefWidth="40.0" text="Edit">
+                           <HBox.margin>
+                              <Insets left="25.0" />
+                           </HBox.margin>
+                        </Button>
+                        <Button fx:id="deleteCategory" mnemonicParsing="false" onAction="#deleteCategory" text="Delete">
+                           <HBox.margin>
+                              <Insets left="50.0" />
+                           </HBox.margin>
+                        </Button>
+                     </children>
+                  </HBox>
+               </children>
+            </VBox>
+            <VBox>
+               <children>
+                  <TableView fx:id="moviesView" maxHeight="530.0" maxWidth="425.0" minHeight="530.0" minWidth="425.0" prefHeight="530.0" prefWidth="425.0">
+                    <columns>
+                      <TableColumn fx:id="movieNameColumn" prefWidth="75.0" text="Title" />
+                      <TableColumn fx:id="ratingColumn" prefWidth="75.0" text="Rating" />
+                    </columns>
+                  </TableView>
+                  <HBox prefWidth="390.0">
+                     <children>
+                        <Button fx:id="newMovie" mnemonicParsing="false" onAction="#openAddMovies" prefHeight="25.0" prefWidth="40.0" text="New" />
+                        <Button fx:id="editMovie" mnemonicParsing="false" onAction="#openAddMovies" prefHeight="25.0" prefWidth="40.0" text="Edit">
+                           <HBox.margin>
+                              <Insets left="25.0" />
+                           </HBox.margin>
+                        </Button>
+                        <Button fx:id="deleteMovie" mnemonicParsing="false" onAction="#deleteMovies" text="Delete">
+                           <HBox.margin>
+                              <Insets left="50.0" />
+                           </HBox.margin>
+                        </Button>
+                     </children>
+                     <VBox.margin>
+                        <Insets top="10.0" />
+                     </VBox.margin>
+                  </HBox>
+               </children>
+            </VBox>
+         </children>
+      </HBox>
+   </children>
+</VBox>
