--- a/src/gui/View/AddMovies.fxml
+++ b/src/gui/View/AddMovies.fxml
@@ -1,14 +1,54 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="gui.Controller.AddMoviesController"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="200.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.Controller.AddMoviesController">
+   <children>
+      <HBox layoutX="75.0" layoutY="40.0" prefHeight="20.0" prefWidth="190.0">
+         <children>
+            <Label prefHeight="20.0" text="Title:">
+               <HBox.margin>
+                  <Insets right="5.0" top="3.0" />
+               </HBox.margin>
+            </Label>
+            <TextField prefHeight="25.0" prefWidth="150.0" />
+         </children>
+      </HBox>
+      <HBox layoutX="75.0" layoutY="70.0" prefHeight="26.0" prefWidth="200.0">
+         <children>
+            <Label prefHeight="20.0" prefWidth="51.0" text="Director:">
+               <HBox.margin>
+                  <Insets right="5.0" top="3.0" />
+               </HBox.margin>
+            </Label>
+            <TextField prefHeight="25.0" prefWidth="115.0">
+               <HBox.margin>
+                  <Insets left="10.0" />
+               </HBox.margin>
+            </TextField>
+         </children>
+      </HBox>
+      <HBox layoutX="75.0" layoutY="100.0" prefHeight="20.0" prefWidth="200.0">
+         <children>
+            <Label prefHeight="20.0" text="File Path:">
+               <HBox.margin>
+                  <Insets right="5.0" top="3.0" />
+               </HBox.margin>
+            </Label>
+            <TextField prefHeight="25.0" prefWidth="117.5">
+               <HBox.margin>
+                  <Insets left="10.0" />
+               </HBox.margin>
+            </TextField>
+         </children>
+      </HBox>
+      <Button fx:id="cancelBtn" layoutX="87.5" layoutY="137.5" mnemonicParsing="false" prefHeight="25.0" prefWidth="52.0" text="Cancel" />
+      <Button fx:id="addMovieBtn" layoutX="175.0" layoutY="137.5" mnemonicParsing="false" prefHeight="25.0" prefWidth="52.0" text="Add" />
+   </children>
 </AnchorPane>
