--- a/src/gui/View/Main.fxml
+++ b/src/gui/View/Main.fxml
@@ -41,13 +41,13 @@
                         <Insets left="30.0" right="30.0" top="10.0" />
                      </VBox.margin>
                      <children>
-                        <Button fx:id="newCategory" mnemonicParsing="false" onAction="#openAddCategories" prefHeight="25.0" prefWidth="40.0" text="New" />
-                        <Button fx:id="editCategory" mnemonicParsing="false" onAction="#openAddCategories" prefHeight="25.0" prefWidth="40.0" text="Edit">
+                        <Button fx:id="newCategoryBtn" mnemonicParsing="false" onAction="#openAddCategories" prefHeight="25.0" prefWidth="40.0" text="New" />
+                        <Button fx:id="editCategoryBtn" mnemonicParsing="false" onAction="#openAddCategories" prefHeight="25.0" prefWidth="40.0" text="Edit">
                            <HBox.margin>
                               <Insets left="25.0" />
                            </HBox.margin>
                         </Button>
-                        <Button fx:id="deleteCategory" mnemonicParsing="false" onAction="#deleteCategory" text="Delete">
+                        <Button fx:id="deleteCategoryBtn" mnemonicParsing="false" onAction="#deleteCategory" text="Delete">
                            <HBox.margin>
                               <Insets left="50.0" />
                            </HBox.margin>
@@ -62,17 +62,18 @@
                     <columns>
                       <TableColumn fx:id="movieNameColumn" prefWidth="75.0" text="Title" />
                       <TableColumn fx:id="ratingColumn" prefWidth="75.0" text="Rating" />
+                        <TableColumn fx:id="directorColumn1" prefWidth="75.0" text="Director" />
                     </columns>
                   </TableView>
                   <HBox prefWidth="390.0">
                      <children>
-                        <Button fx:id="newMovie" mnemonicParsing="false" onAction="#openAddMovies" prefHeight="25.0" prefWidth="40.0" text="New" />
-                        <Button fx:id="editMovie" mnemonicParsing="false" onAction="#openAddMovies" prefHeight="25.0" prefWidth="40.0" text="Edit">
+                        <Button fx:id="newMovieBtn" mnemonicParsing="false" onAction="#openAddMovies" prefHeight="25.0" prefWidth="40.0" text="New" />
+                        <Button fx:id="editMovieBtn" mnemonicParsing="false" onAction="#openAddMovies" prefHeight="25.0" prefWidth="40.0" text="Edit">
                            <HBox.margin>
                               <Insets left="25.0" />
                            </HBox.margin>
                         </Button>
-                        <Button fx:id="deleteMovie" mnemonicParsing="false" onAction="#deleteMovies" text="Delete">
+                        <Button fx:id="deleteMovieBtn" mnemonicParsing="false" onAction="#deleteMovies" text="Delete">
                            <HBox.margin>
                               <Insets left="50.0" />
                            </HBox.margin>
