--- a/src/gui/View/AddMovies.fxml
+++ b/src/gui/View/AddMovies.fxml
@@ -17,7 +17,7 @@
                   <Insets right="5.0" top="3.0" />
                </HBox.margin>
             </Label>
-            <TextField prefHeight="25.0" prefWidth="150.0" />
+            <TextField fx:id="movieTitle" prefHeight="25.0" prefWidth="150.0" />
          </children>
       </HBox>
       <HBox layoutX="75.0" layoutY="70.0" prefHeight="26.0" prefWidth="200.0">
@@ -27,7 +27,7 @@
                   <Insets right="5.0" top="3.0" />
                </HBox.margin>
             </Label>
-            <TextField prefHeight="25.0" prefWidth="115.0">
+            <TextField fx:id="directorName" prefHeight="25.0" prefWidth="115.0">
                <HBox.margin>
                   <Insets left="10.0" />
                </HBox.margin>
@@ -41,14 +41,14 @@
                   <Insets right="5.0" top="3.0" />
                </HBox.margin>
             </Label>
-            <TextField prefHeight="25.0" prefWidth="117.5">
+            <TextField fx:id="filePathText" prefHeight="25.0" prefWidth="117.5">
                <HBox.margin>
                   <Insets left="10.0" />
                </HBox.margin>
             </TextField>
          </children>
       </HBox>
-      <Button fx:id="cancelBtn" layoutX="87.5" layoutY="137.5" mnemonicParsing="false" prefHeight="25.0" prefWidth="52.0" text="Cancel" />
-      <Button fx:id="addMovieBtn" layoutX="175.0" layoutY="137.5" mnemonicParsing="false" prefHeight="25.0" prefWidth="52.0" text="Add" />
+      <Button fx:id="cancelBtn1" layoutX="87.5" layoutY="137.5" mnemonicParsing="false" onAction="#closeWindow" prefHeight="25.0" prefWidth="52.0" text="Cancel" />
+      <Button fx:id="addMovieBtn" layoutX="175.0" layoutY="137.5" mnemonicParsing="false" onAction="#addMovie" prefHeight="25.0" prefWidth="52.0" text="Add" />
    </children>
 </AnchorPane>
