--- a/src/gui/View/AddCategories.fxml
+++ b/src/gui/View/AddCategories.fxml
@@ -8,7 +8,7 @@
 <AnchorPane prefHeight="161.0" prefWidth="250.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.Controller.AddCategoriesController">
    <children>
       <Button fx:id="addCategoryBtn" layoutX="150.0" layoutY="95.0" mnemonicParsing="false" onAction="#addCategory" prefHeight="25.0" prefWidth="52.0" text="Add" />
-      <Button fx:id="cancelBtn2" layoutX="50.0" layoutY="95.0" mnemonicParsing="false" onAction="#closeWindow" prefHeight="25.0" prefWidth="52.0" text="Cancel" />
+      <Button fx:id="cancelBtn2" layoutX="50.0" layoutY="95.0" mnemonicParsing="false" onAction="#closeACWindow" prefHeight="25.0" prefWidth="52.0" text="Cancel" />
       <TextField fx:id="categoryName" layoutX="50.0" layoutY="55.0" />
    </children>
 </AnchorPane>
