--- a/src/gui/View/Main.fxml
+++ b/src/gui/View/Main.fxml
@@ -13,7 +13,7 @@
    <children>
       <HBox prefHeight="120.0" prefWidth="850.0">
          <children>
-            <Label fx:id="label" text="Label">
+            <Label fx:id="errorLabel1">
                <HBox.margin>
                   <Insets left="405.0" top="60.0" />
                </HBox.margin>
